Fix z-index on profile image

--- a/src/CSS/about-panel.pcss
+++ b/src/CSS/about-panel.pcss
@@ -37,7 +37,6 @@
     min-width: 338.13px;
     object-fit: cover;
     padding: 20px 0;
-    z-index: 3;
   
     & img {
         box-shadow: 12px 12px 1px hsl(0deg 0% 100% / 50%);
